DATE       AUTHOR   CHANGE
---------- -------- -----------------------------------------------------------
[1.0.3 released - 2.14.2007]===================================================

[1.0.2 released - 1.4.2007]====================================================
2006-08-23 patrick  Fixed bugs in the NSPR socket classes related to timeouts
                    on blocking sockets when using the WINNT configuration of
                    NSPR.
2006-08-10 patrick  Updated for Boost.Filesystem changes in Boost 1.34.
2006-07-13 patrick  Implemented automatic linking of the VPR library.
2006-07-11 patrick  Link against the dynamic version of the Boost.Filesystem
                    library on Windows.
2006-07-08 patrick  Added support for building universal binaries on Mac OS X.
2006-05-13 patrick  Added operator<< for vpr::ReturnStatus.
2006-04-21 aronb    Added vpr::ReturnStatus::ConnectionAborted.
2006-04-14 aronb    Added the ability to send UDP broadcast datagrams.
2005-12-16 patrickh Added vpr::InetAddr::getAllLocalAddrs().

[1.0.1 released - 8.29.2005]===================================================
2005-08-29 patrickh NEW VERSION: 1.0.1
2005-07-28 patrickh Implemented vpr::SystemBase::getCallStack() for debug
                    builds on Windows.

[1.0.0 released - 7.5.2005]====================================================
2005-07-05 patrickh NEW VERSION: 1.0.0
2005-06-15 patrickh Updated to support Windows 64-bit edition.
                    The preprocessor symbol VPR_OS_Windows is now used to
                    identify the Windows operating system.  VPR_OS_Win32 is
                    used to identify Win32; VPR_OS_Win64 identifies Win64.
                    NEW VERSION: 0.93.1

[1.0 Beta 3 released - 6.7.2005]===============================================
2005-06-06 patrickh NEW VERSION: 0.93.0
2005-05-18 patrickh Fixed header file pollution on Windows resulting from
                    winsock2.h being included by vpr/md/NSPR/SystemNSPR.h.